--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,3 @@
----
-// Welcome to Astro! Everything between these triple-dash code fences
-// is your "component front matter". It never runs in the browser.
-console.log("This runs in your terminal, not the browser!");
----
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -16,6 +10,14 @@ console.log("This runs in your terminal, not the browser!");
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>My Astro Project</h1>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+    <p>
+      I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one
+      I built myself!
+    </p>
+    <p>
+      This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!
+    </p>
   </body>
 </html>
