--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,3 @@
----
-// Welcome to Astro! Everything between these triple-dash code fences
-// is your "component front matter". It never runs in the browser.
-console.log("This runs in your terminal, not the browser!");
----
-
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -16,6 +10,7 @@ console.log("This runs in your terminal, not the browser!");
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>My Astro Project</h1>
+    <h1>My Astro Learning Blog</h1>
+    <p>This is where I will post about my journey learning Astro.</p>
   </body>
 </html>
