--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,16 +1,49 @@
+---
+import "../styles/global.css";
+
+const pageTitle = "About Me";
+
+const identity = {
+  firstName: "Kevin",
+  country: "California",
+  occupation: "Frontend Developer, Teacher, Actor",
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Tailwind"];
+
+const happy = true;
+const finished = false;
+const goal: number = 4;
+
+const fontWeight = 900;
+const skillColor = "navy";
+const textCase = "uppercase";
+---
+
 <html lang="en">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>My Astro Project</title>
+    <title>{pageTitle}</title>
+    <style define:vars={{ skillColor, fontWeight, textCase }}>
+      h1 {
+        color: purple;
+        font-size: 4rem;
+      }
+      .skill {
+        color: var(--skillColor);
+        font-weight: var(--fontWeight);
+        text-transform: var(--textCase);
+      }
+    </style>
   </head>
   <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>About Me</h1>
+    <h1>{pageTitle}</h1>
     <h2>... and my new Astro site!</h2>
     <p>
       I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one
@@ -19,5 +52,14 @@
     <p>
       This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!
     </p>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li class="skill">{skill}</li>)}
+    </ul>
+    {happy && <p>I am happy to be learning Astro!</p>}
+
+    {finished && <p>I finished this tutorial!</p>}
+
+    {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
   </body>
 </html>
